Add link for issues

--- a/eqtool.html
+++ b/eqtool.html
@@ -146,6 +146,10 @@
             Note that the Web Audio API does not currently support <a href="https://github.com/WebAudio/web-audio-api/issues/2428">setting the Q for low- and high-shelf filters</a>.
         </p>
 
+        <p>
+            Please <a href="https://github.com/chummersone/chummersone.github.io/issues">report any issues on GitHub</a>.
+        </p>
+
         <div class="controlPanel" id="audioControls"><!--
 
          --><div class="controlGroup" id="mainControls"><!--
