--- a/eqtool.html
+++ b/eqtool.html
@@ -15,7 +15,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://chummersone.github.io/assets/css/style.css?v=f6040d589f1187e6eaa1ec97f2b3af33299fb0ad">
         <link rel="stylesheet" href="css/qformat.css?v=5">
-        <link rel="stylesheet" href="css/eqtool.css?v=5">
+        <link rel="stylesheet" href="css/eqtool.css?v=6">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.umd.js" integrity="sha512-6HrPqAvK+lZElIZ4mZ64fyxIBTsaX5zAFZg2V/2WT+iKPrFzTzvx6QAsLW2OaLwobhMYBog/+bvmIEEGXi0p1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="scripts/eq.js?v=6"></script>
         <script src="scripts/eq.ui-control.js?v=7"></script>
@@ -154,8 +154,11 @@
 
          --><div class="controlGroup" id="mainControls"><!--
 
-             --><div class="control"><!--
-                 --><input type="file" accept="audio/*" id="audioFileInput" multiple><!--
+             --><div class="control center"><!--
+                 --><label class="button" for="audioFileInput"><input type="file" accept="audio/*" id="audioFileInput" multiple>Choose Files</label><!--
+                 --><button id="addFilterButton">Add filter</button><!--
+                 --><button id="viewCoefficients">View coefficients</button><!--
+                 --><button id="remember">Save</button><!--
              --></div><!--
 
              --><div class="control"><!--
@@ -168,11 +171,6 @@
                  --><input type="number" id="inputGain_number" min="-20" max="20" step="0.1" value="0"><!--
              --></div><!--
 
-             --><div class="control center"><!--
-                 --><button id="addFilterButton">Add filter</button><!--
-                 --><button id="viewCoefficients">View coefficients</button><!--
-                 --><button id="remember">Save</button><!--
-             --></div><!--
 
          --></div><!--
 
