--- a/eqtool.html
+++ b/eqtool.html
@@ -156,8 +156,8 @@
 
              --><div class="control center"><!--
                  --><label class="button" for="audioFileInput"><input type="file" accept="audio/*" id="audioFileInput" multiple>Choose Files</label><!--
-                 --><button id="addFilterButton">Add filter</button><!--
-                 --><button id="viewCoefficients">View coefficients</button><!--
+                 --><button id="addFilterButton">Add Filter</button><!--
+                 --><button id="viewCoefficients">View Coefficients</button><!--
                  --><button id="remember">Save</button><!--
              --></div><!--
 
@@ -166,7 +166,7 @@
              --></div><!--
 
              --><div class="control"><!--
-                 --><label for="inputGain">Input gain / dB</label><!--
+                 --><label for="inputGain">Input Gain / dB</label><!--
                  --><input type="range" id="inputGain" min="-20" max="20" step="0.1" value="0"><!--
                  --><input type="number" id="inputGain_number" min="-20" max="20" step="0.1" value="0"><!--
              --></div><!--
