--- a/eqtool.html
+++ b/eqtool.html
@@ -13,13 +13,13 @@
         <meta property="og:site_name" content="chummersone.github.io" />
         <meta property="og:type" content="website" />
         <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
         <link rel="stylesheet" href="https://chummersone.github.io/assets/css/style.css?v=f6040d589f1187e6eaa1ec97f2b3af33299fb0ad">
         <link rel="stylesheet" href="css/qformat.css?v=5">
         <link rel="stylesheet" href="css/eqtool.css?v=10">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.umd.js" integrity="sha512-6HrPqAvK+lZElIZ4mZ64fyxIBTsaX5zAFZg2V/2WT+iKPrFzTzvx6QAsLW2OaLwobhMYBog/+bvmIEEGXi0p1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="scripts/eq.js?v=6"></script>
-        <script src="scripts/eq.ui-control.js?v=13"></script>
+        <script src="scripts/eq.ui-control.js?v=14"></script>
         <script>
             Chart.defaults.elements.point = {
                 pointStyle: false
