Update issue links

--- a/eqtool.html
+++ b/eqtool.html
@@ -140,7 +140,7 @@
         </p>
 
         <p>
-            Please <a href="https://github.com/chummersone/chummersone.github.io/issues">report any issues on GitHub</a>.
+            Please <a target="_blank" href="https://github.com/chummersone/chummersone.github.io/issues/new?title=%5Beqtool.html%5D%20">report any issues on GitHub</a>.
         </p>
 
         <div class="controlPanel" id="audioControls"><!--
