--- a/qformat.html
+++ b/qformat.html
@@ -77,7 +77,7 @@
             <li>Perform arithmetic operations on fixed-point values.</li>
         </ul>
 
-        <p>Please <a href="https://github.com/chummersone/chummersone.github.io/issues">report any issues on GitHub</a>.</p>
+        <p>Please <a target="_blank" href="https://github.com/chummersone/chummersone.github.io/issues/new?title=%5Bqformat.html%5D%20">report any issues on GitHub</a>.</p>
 
         <div id="container">
             <div id="tabs">
