--- a/eqtool.html
+++ b/eqtool.html
@@ -16,10 +16,10 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
         <link rel="stylesheet" href="https://chummersone.github.io/assets/css/style.css?v=f6040d589f1187e6eaa1ec97f2b3af33299fb0ad">
         <link rel="stylesheet" href="css/qformat.css?v=5">
-        <link rel="stylesheet" href="css/eqtool.css?v=12">
+        <link rel="stylesheet" href="css/eqtool.css?v=13">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.umd.js" integrity="sha512-6HrPqAvK+lZElIZ4mZ64fyxIBTsaX5zAFZg2V/2WT+iKPrFzTzvx6QAsLW2OaLwobhMYBog/+bvmIEEGXi0p1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="scripts/eq.js?v=7"></script>
-        <script src="scripts/eq.ui-control.js?v=16"></script>
+        <script src="scripts/eq.ui-control.js?v=17"></script>
         <script>
             document.addEventListener("DOMContentLoaded", function(event) {
                 // Chart defaults
@@ -63,10 +63,26 @@
                     Array.prototype.forEach.call(event.target.files, (file) => {
                         context.playlist.addFile(new AudioFile(file, context.audioCtx, context.audioNode))
                     })
-                    if (!context.playlist.nowPlaying) {
-                        context.playlist.play(0)
-                    }
                 }, false)
+
+                document.getElementById("playlistGroup").addEventListener("dragover", function (event) {
+                    // Prevent file from being opened
+                    event.preventDefault();
+                })
+                document.getElementById("playlistGroup").addEventListener("drop", function (event) {
+                    // Prevent file from being opened
+                    event.preventDefault();
+
+                    // Process files
+                    if (event.dataTransfer.items) {
+                        Array.prototype.forEach.call(event.dataTransfer.items, (item) => {
+                            if ((item.kind === "file") && (item.type.startsWith("audio/"))) {
+                                const file = item.getAsFile();
+                                context.playlist.addFile(new AudioFile(file, context.audioCtx, context.audioNode))
+                            }
+                        })
+                    }
+                })
 
                 // User is adding a filter
                 document.getElementById("addFilterButton").addEventListener("click", function(event) {
@@ -171,7 +187,7 @@
 
          --></div><!--
 
-         --><div class="controlGroup" id="playlistGroup"><!--
+         --><div class="controlGroup" draggable id="playlistGroup"><!--
 
          --></div><!--
 
