Tweaks to line style

--- a/eqtool.html
+++ b/eqtool.html
@@ -33,6 +33,7 @@
                 Chart.defaults.color = '#ccc';
                 Chart.defaults.animation.duration = 100;
                 Chart.defaults.plugins.legend.display = false
+                Chart.defaults.elements.line.borderWidth = 2;
 
                 // Initialise the context for the page
                 const audioCtx = new AudioContext()
